client/src/scss/admin-screen.scss
@use 'colors.scss';

.admin-subpage {
  display: flex;
  flex-direction: column;
  height: 100%;
  .admin-header {
    position: sticky;
    top: 0;
  }
}

.deck-header {
  width: 100%;
  display: flex;
  align-items: center;
  .deck-id {
    font-family: monospace;
    font-weight: 300;
    font-size: 13px;
    opacity: 0.5;
    margin-left: auto;
    width: 15em;
    margin-right: 1em;
  }
}

.admin-decks-toolbar {
  display: flex;
  h2 {
    margin-right: auto;
  }
}

.admin-deck-table {
  width: 100%;
  table-layout: fixed; // this is important for text ellipsis...
  border-collapse: separate;
  border-spacing: 0 2px;
  text-wrap: nowrap;
  tr {
    font-size: 13px;
  }
  td {
    padding: 0 0.5em;
  }
  .col-card-id {
    width: 4em;
    font-variant-numeric: tabular-nums;
    text-align: right;
  }
  .col-card-tags {
    width: 20%;
    overflow: hidden;
  }
  .col-card-counter {
    width: 5%;
    font-variant-numeric: tabular-nums;
    text-align: right;
    &.empty {
      opacity: 0.4;
    }
  }
  .col-card-content {
    // padding: 0.1em 0.5em;
    border-radius: 0.4em;
    display: flex;
    gap: 0.5em;
    align-items: center;
    .prompt-pick-number {
      align-self: flex-end;
      // not needed because the edit button is there:
      // margin-left: auto;
      margin-bottom: 0.1em;
      margin-right: -0.1em;
      flex-shrink: 0;
    }
  }
  .row-prompt .col-card-content {
    background-color: colors.$card-prompt-bg-dark;
    color: colors.$card-prompt-text;
  }
  .row-response .col-card-content {
    background-color: colors.$card-response-bg;
    color: colors.$card-response-text;
  }
  .card-row {
    cursor: pointer;
    &:hover,
    &.selected {
      background-color: colors.$button-light-bg;
      &.row-prompt .col-card-content {
        background-color: rgba(colors.$card-prompt-bg-dark, 0.5);
      }
      &.row-response .col-card-content {
        // background-color: rgba(colors.$button-border-hover, 0.3);
        background-color: rgba(colors.$card-response-bg, 0.7);
      }
    }
    &:hover .edit-button {
      display: block; // visible on hover
    }
    &.errored {
      background-color: colors.$error-red;
    }
  }
  .card-row.selected {
    background-color: colors.$accent;
    color: colors.$button-accent-text;
  }
  .card-content-admin-row {
    padding: 0 0.25rem;
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
  }
  .edit-button-container {
    margin-left: auto;
    height: 100%;
    .edit-button {
      display: none; // hidden by default
    }
  }
  .row-prompt .edit-button {
    @extend .light-button; // dark bg
  }
  .row-response .edit-button {
    @extend .lighter-button; // light bg
  }
}
.admin-deck-control-row {
  position: sticky;
  z-index: 1;
  top: 3em; //TODO: import accordion height
  padding: 0.5em 0;
  margin-top: -0.5em; // combat accordion section padding
  background-color: var(--bs-body-bg); // bg color
  color: rgba(colors.$text, 70%);
  font-weight: 200;
  .col-card-id {
    .checkbox {
      margin: auto;
    }
  }
  .deck-count {
    margin-left: auto;
    overflow: hidden;
    .number {
      font-weight: 400;
    }
  }
  td {
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

.copy-cards-dialog {
  .table-container {
    // TODO: figure out a better way to fit within the screen and allow scroll
    max-height: 50vh;
  }
  .admin-deck-control-row {
    top: 0;
    background-color: colors.$panel-bg; // bg color
    margin: 0;
  }
  .deck-form {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 1em;
    row-gap: 1em;
    margin-bottom: 0.5em;
  }
  footer {
    margin-top: 1em;
  }
  .warn-msg {
    color: colors.$error-red;
    font-weight: bold;
  }
}

.admin-deck-selector {
  min-width: 0; // This ignores extra long values and fits in the grid
}

